Sprint 6: added history block